# ai_engineering

./: README.md
01_ollama_python_simple_example/: README.md  main.py  pyproject.toml
huggingface/agent_course/unit_1_dummy_agent/: country.py  main.py  pyproject.toml  weather.py
huggingface/agent_course/unit_2_smolagent/: README.md  main.py  pyproject.toml
